ipad media align fix profile media

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* Update x+14 21 jul 20 */
+/* Update x+15 21 jul 20 */
 
 /* Variables */
 :root {
@@ -639,7 +639,7 @@ font-size: 0.8rem;
 }
 
 @media (pointer:none), (pointer:coarse) {
-  @media screen and (orientation: portrait) {
+  @media screen and (max-width: 47rem) and (orientation: portrait) {
 
     #profile-media-container {
       margin-top: 0.5rem;
